# zvec-native

./: .npmignore  Cargo.toml  LICENSE  README.md  index.d.ts  index.js  package-lock.json  package.json
.github/workflows/: CI.yml
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64-gnu/: package.json
npm/linux-x64-gnu/: package.json
npm/win32-x64-msvc/: package.json
src/: collection.rs  lib.rs  persistence.rs
tests/: index.test.mjs
