[package]
name = "zvec-native"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi6", "serde-json"] }
napi-derive = "3"
hnsw_rs = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
base64 = "0.22"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
